[package]
name = "views"
version = "0.3.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"
description = "Extension to slices for buffers"
license = "Zlib"
readme = "readme.md"
homepage = "https://github.com/jamen/views"
repository = "https://github.com/jamen/views"
docmentation = "https://docs.rs/views"